<resources>
    <string name="app_name">云湖 Old</string>
    <string name="login_title">登录</string>
    <string name="tab_email">邮箱登录</string>
    <string name="tab_phone">手机登录</string>
    <string name="hint_email">请输入邮箱</string>
    <string name="hint_password">请输入密码</string>
    <string name="hint_phone">请输入手机号</string>
    <string name="hint_image_code">图形验证码</string>
    <string name="hint_sms_code">短信验证码</string>
    <string name="btn_login">登录</string>
    <string name="btn_get_code">获取验证码</string>
    <string name="menu_settings">设置</string>
    <string name="settings_dark_mode">深色模式</string>
    <string name="settings_dark_mode_desc">开启深色模式，关闭时跟随系统深色设置</string>
    <string name="menu_language">语言</string>
    <string name="menu_logout">登出</string>
    <string name="logout_success">登出成功</string>
    <string name="logout_failed">登出失败</string>
    <string name="logout_confirm_title">提示</string>
    <string name="logout_confirm_message">确定要退出登录吗？</string>
    <string name="menu_conversations">会话</string>
    <string name="menu_address_book">通讯录</string>
    <string name="menu_community">社区</string>
    <string name="menu_discovery">发现</string>
    <string name="action_search">搜索</string>
    <string name="search_hint">搜索用户、群组、机器人</string>
    <string name="search_no_result">无搜索结果</string>
    <string name="search_failed">搜索失败</string>
    <string name="fab_new_chat">新建会话</string>
    <string name="fab_new_group">新建群聊</string>
    <string name="action_back">返回</string>
    <string name="action_more">更多</string>
    <string name="chat_default_title">聊天</string>
    <string name="chat_empty">暂无聊天记录</string>
    <string name="chat_load_failed">获取聊天记录失败</string>
    <string name="chat_load_older_failed">获取更早消息失败</string>
    <string name="unknown_user"></string>
    <string name="message_unsupported">[不支持的消息]</string>
    <string name="message_image">图片消息\n点击查看</string>
    <string name="message_file">[文件] %1$s</string>
    <string name="message_sticker">表情消息\n点击查看</string>
    <string name="preview_image">[图片]</string>
    <string name="preview_file">[文件] %1$s</string>
    <string name="preview_file_generic">[文件]</string>
    <string name="preview_voice">[语音]</string>
    <string name="preview_video">[视频]</string>
    <string name="preview_sticker">[表情]</string>
    <string name="preview_markdown">[文本]</string>
    <string name="preview_html">[HTML]</string>
    <string name="preview_form">[表单]</string>
    <string name="preview_article">[文章]</string>
    <string name="post_detail_title">文章详情</string>
    <string name="post_load_failed">加载文章失败</string>
    <string name="post_loading">加载中…</string>
    <string name="post_author_format">作者: %1$s</string>
    <string name="post_time_format">发布于 %1$s</string>
    <string name="preview_call">[通话]</string>
    <string name="preview_unknown">[消息]</string>
    <string name="fab_compose">发消息</string>
    <string name="hint_input_message">输入消息</string>
    <string name="btn_send">发送</string>
    <string name="send_failed">发送失败</string>
    <string name="lang_system">跟随系统</string>
    <string name="lang_chinese">简体中文</string>
    <string name="lang_english">English</string>
    <string name="user_profile_title">用户资料</string>
    <string name="user_profile_avatar">头像</string>
    <string name="user_profile_vip">VIP 会员</string>
    <string name="user_profile_load_failed">获取用户信息失败</string>
    <string name="user_profile_register_time">注册时间：%1$s</string>
    <string name="user_profile_online_day">在线天数：%1$d 天</string>
    <string name="user_profile_continuous_online">连续在线：%1$d 天</string>
    <string name="user_profile_gender">性别：%1$s</string>
    <string name="user_profile_gender_male">男</string>
    <string name="user_profile_gender_female">女</string>
    <string name="user_profile_gender_other">其他</string>
    <string name="user_profile_gender_unknown">未知</string>
    <string name="user_profile_birthday">生日：%1$s</string>
    <string name="user_profile_last_active">上次活跃：%1$s</string>
    <string name="user_profile_introduction">简介：%1$s</string>
    <string name="user_profile_ip_geo">IP 归属地：%1$s</string>
    <string name="user_profile_medals">徽章：%1$s</string>
    <string name="user_profile_no_medal">无</string>
    <string name="bot_profile_title">机器人信息</string>
    <string name="bot_profile_load_failed">获取机器人信息失败</string>
    <string name="bot_profile_introduction">简介：%1$s</string>
    <string name="bot_profile_headcount">使用人数：%1$s</string>
    <string name="bot_profile_create_time">创建时间：%1$s</string>
    <string name="bot_profile_create_by">创建者ID：%1$s</string>
    <string name="bot_profile_private">是否私有：%1$s</string>
    <string name="bot_profile_private_yes">是</string>
    <string name="bot_profile_private_no">否</string>
    <string name="bot_profile_status">状态：%1$s</string>
    <string name="bot_profile_status_active">启用中</string>
    <string name="bot_profile_status_stopped">已停用</string>
    <string name="bot_profile_unknown">未知</string>
    <string name="group_profile_title">群聊信息</string>
    <string name="group_profile_load_failed">获取群聊信息失败</string>
    <string name="group_profile_introduction">简介：%1$s</string>
    <string name="group_profile_member">群人数：%1$s</string>
    <string name="group_profile_create_by">创建者ID：%1$s</string>
    <string name="group_profile_category">分类：%1$s</string>
    <string name="group_profile_private">是否私有</string>
    <string name="group_profile_private_yes">是</string>
    <string name="group_profile_private_no">否</string>
    <string name="group_profile_members">群成员</string>
    <string name="group_profile_members_format">群成员 (%1$d)</string>
    <string name="group_profile_do_not_disturb">消息免打扰</string>
    <string name="group_profile_top">置顶聊天</string>
    <string name="group_profile_save_to_contacts">保存到通讯录</string>
    <string name="group_profile_direct_join">允许直接加入</string>
    <string name="group_profile_history_msg">新成员可查看历史消息</string>
    <string name="group_profile_hide_members">隐藏群成员列表</string>
    <string name="group_profile_auto_delete">自动删除消息</string>
    <string name="group_profile_auto_delete_days_format">%1$d 天</string>
    <string name="auto_delete_select_title">设置自动删除消息天数</string>
    <string name="auto_delete_custom">自定义天数</string>
    <string name="auto_delete_custom_hint">请输入天数（天）</string>
    <string name="edit_group_name_title">修改群聊名称</string>
    <string name="edit_group_intro_title">修改群聊简介</string>
    <string name="group_profile_deny_upload">禁止成员上传到群盘</string>
    <string name="group_profile_ban_reason">禁言原因</string>
    <string name="group_profile_no_ban">无</string>
    <string name="group_profile_community">关联分区</string>
    <string name="group_profile_tags">群标签</string>
    <string name="group_profile_my_nickname">我的群昵称</string>
    <string name="group_profile_group_code">群号码</string>
    <string name="group_members_title">群成员</string>
    <string name="group_members_load_failed">获取群成员失败</string>
    <string name="group_members_search_hint">搜索群成员</string>
    <string name="group_member_owner">群主</string>
    <string name="group_member_admin">管理员</string>
    <string name="group_member_gagged">已禁言</string>
    <string name="group_profile_introduction_label">群简介</string>
    <string name="group_profile_info_label">群信息</string>
    <string name="group_profile_create_by_label">创建者</string>
    <string name="group_profile_category_label">分类</string>
    <string name="group_profile_owner_label">群主ID</string>
    <string name="group_profile_admins_label">管理员ID</string>
    <string name="group_profile_none">无</string>
    <string name="group_profile_off">关闭</string>
    <string name="notification_channel_name">聊天消息</string>
    <string name="notification_channel_desc">接收新消息通知</string>
    <string name="notification_new_message">新消息</string>
    <string name="message_admin_tag">管理员</string>
    <string name="message_owner_tag">群主</string>
    <string name="message_bot_tag">机器人</string>
    <string name="tab_conversations_format">会话 (%1$d)</string>
    <string name="tab_sticky_format">置顶 (%1$d)</string>
    <string name="tab_sticky_title">置顶会话</string>
    <string name="sticky_load_failed">获取置顶会话失败</string>
    <string name="settings_ws_log">WebSocket 日志</string>
    <string name="settings_avatar_threads_title">头像加载线程数</string>
    <string name="settings_avatar_threads_format">%1$d 线程</string>
    <string name="settings_avatar_threads_dialog_title">设置头像加载线程数（最低为 1 线程）</string>
    <string name="settings_avatar_threads_min_hint">请输入并发线程数 (≥ 1)</string>
    <string name="mine_my_posts">我的文章</string>
    <string name="mine_my_collects">我的收藏</string>
    <string name="mine_blocked_users">屏蔽用户</string>
    <string name="blocked_users_title">屏蔽的用户</string>
    <string name="blocked_users_empty">暂无屏蔽的用户</string>
    <string name="unblock_button">取消屏蔽</string>
    <string name="unblock_success">已取消屏蔽</string>
    <string name="my_posts_title">我的文章</string>
    <string name="my_collects_title">我的收藏</string>
    <string name="my_posts_empty">暂无发布的文章</string>
    <string name="my_collects_empty">暂无收藏的文章</string>
    <string name="network_error">网络异常，请稍后重试</string>
    <string name="ws_log_clear">清空</string>
    <string name="ws_log_empty">暂无日志</string>
    <string name="image_preview_desc">图片预览</string>
    <string name="image_preview_save">保存</string>
    <string name="image_preview_saved">已保存到相册</string>
    <string name="image_preview_save_failed">保存失败</string>
    <string name="image_preview_save_permission_denied">需要存储权限才能保存</string>
    <string name="image_preview_load_failed">图片加载失败</string>
    <string name="image_preview_not_ready">图片尚未加载完成</string>
    <string name="message_quote">引用</string>
    <string name="message_file_download">下载</string>
    <string name="message_file_downloading">下载中 %1$d%%</string>
    <string name="message_file_cancel">取消</string>
    <string name="message_file_open">打开</string>
    <string name="message_file_failed">下载失败</string>
    <string name="group_profile_update_failed">更新群信息失败</string>
    <string name="group_profile_community_readonly">关联分区当前仅展示，仓库文档里还没找到可修改接口</string>
    <string name="tab_address_book_friends">好友</string>
    <string name="tab_address_book_groups">群聊</string>
    <string name="tab_address_book_bots">机器人</string>
    <string name="address_book_empty">暂无联系人</string>
    <string name="address_book_not_logged_in">未登录</string>
    <string name="address_book_load_failed">网络加载失败: %1$s</string>
    <string name="address_book_fetch_failed">获取通讯录失败</string>
    <string name="action_refresh">刷新</string>
    <string name="address_book_refreshed">通讯录已刷新</string>
    <string name="conversations_refreshed">会话列表已刷新</string>
    <string name="sticky_refreshed">置顶列表已刷新</string>
    <string name="action_report">举报</string>
    <string name="action_add_friend">添加</string>
    <string name="action_enter_chat">进入聊天</string>
    <string name="report_submitted">已提交举报，系统将在24小时内处理</string>
    <string name="friend_request_sent">好友申请已发送</string>
    <string name="settings_clear_all_cache">清除所有缓存</string>
    <string name="settings_cache_cleared">已清除所有缓存</string>
    <string name="settings_cache_size_format">缓存大小：%1$s</string>
    <string name="user_id_format">ID: %1$s</string>
    <string name="group_title_format">%1$s (%2$d)</string>
    <string name="member_action_kick">踢出成员</string>
    <string name="member_action_mute">禁言成员</string>
    <string name="member_action_unmute">取消禁言</string>
    <string name="member_action_set_admin">设置管理员</string>
    <string name="label_group_name">群聊名称</string>
    <string name="label_group_intro">群聊简介</string>
    <string name="label_avatar_url">头像 URL</string>
    <string name="label_bot_name">机器人名称</string>
    <string name="label_bot_intro">机器人简介</string>
    <string name="label_bot_private">私有机器人</string>
    <string name="btn_submit_create_group">创建群聊</string>
    <string name="btn_submit_create_bot">创建机器人</string>
    <string name="report_select_image">+ 添加图片</string>
</resources>